8306768: CodeCache Analytics reports wrong threshold

Reviewed-by: phh